--- a/index.html
+++ b/index.html
@@ -8,15 +8,7 @@
     <title>Static Template</title>
   </head>
   <body>
-    <svg
-      class="heart-loader"
-      xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-      xmlns:svg="http://www.w3.org/2000/svg"
-      xmlns="http://www.w3.org/2000/svg"
-      xmlns:xlink="http://www.w3.org/1999/xlink"
-      viewBox="0 0 90 90"
-      version="1.1"
-    >
+    <svg class="heart-loader" viewBox="0 0 90 90">
       <g class="heart-loader__group">
         <path
           class="heart-loader__square"
@@ -43,19 +35,5 @@
         />
       </g>
     </svg>
-    <div class="other">
-      <a
-        href="https://codepen.io/suez/pen/doMKLP/"
-        target="_blank"
-        class="other__link"
-        >Pin Animation</a
-      >
-      <a
-        href="https://codepen.io/suez/pen/MwJdRy/"
-        target="_blank"
-        class="other__link"
-        >Logo Animation</a
-      >
-    </div>
   </body>
 </html>
